--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
                 <img width="100%" src="/img/home/dashboardThumbnail.svg">
             </div>
             <div class="col-12 col-xl-5 container-text text-end align-self-center">
-                <h2>IMMER DEN DIREKTEN ÜBERLICK HABEN</h2>
+                <h2>IMMER DEN DIREKTEN ÜBERBLICK HABEN</h2>
                 <p>Über das Server Dashboard hast du immer Zugriff auf deine MC Daten. Zudem kannst du Online- und Afkzeiten einsehen.</p>
                 <button onclick="location.assign('/minecraft/')" class="button">DASHBOARD</button>
             </div>
