--- a/index.html
+++ b/index.html
@@ -11,6 +11,9 @@
     <!-- Standard Meta -->
     <meta name="theme-color" content="#19191F">
     <title>Parcivad | Home</title>
+    
+    <!-- Google Search Console Site Verification -->
+    <meta name="google-site-verification" content="1clg0TjXbtTWKnoPEHXpknU613gInSY4fSw1394GBzg" />
 
     <!--Favicon Icons-->
     <link href="/img/favicon_io/apple-touch-icon.png" rel="apple-touch-icon" sizes="180x180">
