--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <!--Social Media Headline-->
     <meta property="og:local" content="de_DE">
     <meta property="og:title" content="Classync"/>
-    <meta property="og:description" content="TODO: Beschreibung"/>
+    <meta property="og:description" content="Eure Abiapp und Stufenverwalter."/>
     <meta property="og:url" content="https://www.classync.de">
     <meta property="og:type" content="Website"/>
 
