--- a/go/index.html
+++ b/go/index.html
@@ -20,6 +20,9 @@
 
     <!--Favicon Icons-->
     <link href="/go/img/favicon/apple-touch-icon.png" rel="apple-touch-icon" sizes="180x180">
+    <link href="/go/img/favicon/android-chrome-192x192.png" rel="icon" type="image/png" sizes=192x192">
+    <link href="/go/img/favicon/android-chrome-512x512.png" rel="icon" type="image/png" sizes=512x512">
+    <link href="/go/img/favicon/favicon-32x32.png" rel="icon" type="image/png" sizes="32x32">
     <link href="/go/img/favicon/favicon-32x32.png" rel="icon" type="image/png" sizes="32x32">
     <link href="/go/img/favicon/favicon-16x16.png" rel="icon" type="image/png" sizes="16x16">
     <link href="/go/img/favicon/site.webmanifest" rel="manifest">
