New Profile UI and small tweaks

--- a/go/index.html
+++ b/go/index.html
@@ -99,6 +99,7 @@
 <script defer src="/go/js/TextUtils.js" rel="script" type="text/javascript"></script>
 <script defer src="/go/js/CookieHandler.js" rel="script" type="text/javascript"></script>
 <script defer src="/go/js/DataHolder.js" rel="script" type="text/javascript"></script>
+<script defer src="/go/js/DataUtils.js" rel="script" type="text/javascript"></script>
 <script defer src="/go/js/Permission.js" rel="script" type="text/javascript"></script>
 <script defer src="/go/js/StudentApi.js" rel="script" type="text/javascript"></script>
 <script defer src="/go/js/URLParams.js" rel="script" type="text/javascript"></script>
@@ -106,6 +107,7 @@
 
 <!-- React Components -->
 <script defer type="text/babel" src="/go/react/Classync.jsx"></script>
+<script defer type="text/babel" src="/go/react/ContainerHome.jsx"></script>
 <script defer type="text/babel" src="/go/react/ContainerProfile.jsx"></script>
 <script defer type="text/babel" src="/go/react/ContainerPoll.jsx"></script>
 <script defer type="text/babel" src="/go/react/ContainerRanking.jsx"></script>
