--- a/go/index.html
+++ b/go/index.html
@@ -247,9 +247,8 @@
 
     // render application after first bootUp or Display error
     bootUp().then(() => root.render(<>
-        <ContainerInformationBanner
-                    color="red" icon="planet-outline" title="App pausiert"
-                    description={`Die Ansicht von Daten ist nicht möglich.`} />
+        <Classync />
+        <ItemPopupCards />
     </>))
         .catch(error => {
             if (error["error_key"] === "authentication_required" || error["error_key"] === "token_expired") return
@@ -258,8 +257,8 @@
             // render information loader
             root.render(
                 <ContainerInformationBanner
-                    color="red" icon="planet-outline" title="App pausiert"
-                    description={`Die Ansicht von Daten ist nicht möglich.`} />
+                    color="red" icon="planet-outline" title="Sorry!"
+                    description={`Etwas ist schiefgelaufen. Überprüfe deine Internet Verbindung oder versuche es zu einem späteren Zeitpunkt.`} />
             )
         })
 </script>
